# Retro-Cubos-Jam

./: .gitignore  CMakeLists.txt  README.md  emscripten.html
assets/: input.bind  main.pal
assets/scenes/: level.cubos  main.cubos  player.cubos
assets/voxels/: .gitignore
assets/voxels/blocks/: bad-question-mark-block.grd  bad-question-mark-block.qb  bad-question-mark-block.vox  snowy-level-16.qb  snowy-level-16.vox  snowy-level.vox
assets/voxels/penguin/: penguin-2-right arm.qb  penguin-4-head.qb  penguin-5-beak.qb  penguin.grd  penguin_scaled.qb  penguin_whole.qb
penguin/: penguin-0-right foot.qb  penguin-1-left foot.qb  penguin-3-left arm.qb  penguin-6-body.qb
scripts/: Get-Assets.ps1  scratch.txt
src/: freakingAudio.cpp  freakingAudio.hpp  main.cpp  player.cpp  player.hpp  question-mark-block.cpp  question-mark-block.hpp
